--- a/css/public.css
+++ b/css/public.css
@@ -160,6 +160,31 @@ header a:hover{
     margin:auto; 
     font-size: 0.5cm;
 }
+#order img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    height: 260px;   
+    border: 8px solid #7E3F8F;
+    border-radius: 10%;
+}
+
+
+#order img:hover{
+    border: 8px solid white;
+    border-radius: 10%;
+    opacity: 0.8;
+}
+#order h3 { 
+    position: absolute; 
+    top: 110px; 
+    left: 100px; 
+    width: 100%; 
+    font-size: 1cm;
+    font-weight: 900;
+    color:white;
+ }
 
 
 
